[package]
name = "congress_rolls"
description = "A simple library to interact with senate.gov and house.gov roll call votes"
version = "0.0.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/t-fbd/cdg_api"
license-file = "LICENSE"
keywords = ["gov", "congress", "api", "serde", "documents"]
categories = ["api-bindings", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.41.0", features = ["full"] }
walkdir = "2.5.0"
lazy_static = "1.5.0"
indicatif = "0.17.8"
rusqlite = { version = "0.32.1", features = ["bundled"] }
sha2 = "0.10.8"
